<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nama_jadwal"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:hint="@string/jadwalHint"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@android:color/white"
            android:textColorHint="@color/primary_text_disabled_material_dark"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginLeft="72dp"
                android:paddingTop="36dp"
                android:text="@string/detail"
                android:textColor="?attr/colorControlNormal"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/hari"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setHari">

                <ImageView
                    android:id="@+id/icon_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/ic_date_range_black_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/icon_hari"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teks_hari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hari"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_hari"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/waktu"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setWaktu">

                <ImageView
                    android:id="@+id/icon_waktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/ic_access_time_black_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/icon_waktu"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teks_waktu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waktu"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_waktu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/pengulangan"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/icon_ulang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_autorenew_black_24dp" />

                <LinearLayout
                    android:id="@+id/pengulanganL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/icon_ulang"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teks_ulang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengulangan"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_ulang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="15dp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/switch_ulang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:onClick="setUlangSwitch"
                    android:textOff="@string/ulang_off"
                    android:textOn="@string/ulang_on" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/waktu_pengingat"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="setWaktuPengingat">

                <ImageView
                    android:id="@+id/icon_waktu_pengingat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:src="@drawable/ic_alarm_black_24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/icon_waktu_pengingat"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teks_waktupengingat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waktu_pengingat"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/set_waktupengingat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/secondary_text_light"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/catatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/icon_catatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/baseline_notes_black_24" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/icon_catatan"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/teks_catatan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Catatan :"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_catatan"
                        android:layout_width="match_parent"
                        android:layout_height="95dp"
                        android:hint="Catatan"
                        android:inputType="textCapWords|textMultiLine"
                        android:lines="3"
                        android:minLines="3"
                        android:scrollHorizontally="false"
                        android:textColor="@color/secondaty_light"
                        android:textColorHint="@color/primary_text_disabled_material_light"
                        android:textSize="20dp" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/alarm_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:clickable="true"
        android:onClick="setAlarmAktif"
        app:fabSize="normal"
        app:rippleColor="@color/fab_pressed"
        app:srcCompat="@drawable/ic_notifications_off_white_24dp"
        app:useCompatPadding="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/alarm_aktif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:clickable="true"
        android:onClick="setAlarmOff"
        app:fabSize="normal"
        app:rippleColor="@color/fab_pressed"
        app:srcCompat="@drawable/ic_notifications_on_white_24dp"
        app:useCompatPadding="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/simpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-2.5dp"
        android:layout_marginRight="4dp"
        android:clickable="true"
        android:onClick="simpan"
        android:src="@drawable/ic_check_white_24dp"
        app:fabSize="normal"
        app:useCompatPadding="true" />

</RelativeLayout>